--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "compile": "npx tsc",
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch './src/' -e ts",
     "start": "node ./dist/blockchain.js",
-    "test": "jest"
+    "test": "jest",
+    "blockchain": "ts-node ./src/server/blockchainServer.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/morgan": "^1.9.9",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   }
 }
