--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npx nodemon ./src/lib/blockchain.ts --watch './src/' -e ts",
     "start": "node ./dist/blockchain.js",
     "test": "jest",
-    "blockchain": "ts-node ./src/server/blockchainServer.ts --run"
+    "blockchain": "ts-node ./src/server/blockchainServer.ts --run",
+    "miner": "ts-node ./src/client/minerClient.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
