--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   }
