--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node ./dist/blockchain.js",
     "test": "jest",
     "blockchain": "ts-node ./src/server/blockchainServer.ts --run",
-    "miner": "ts-node ./src/client/minerClient.ts"
+    "miner": "ts-node ./src/client/minerClient.ts",
+    "wallet": "ts-node ./src/client/walletClient.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,9 @@
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.4",
+    "ecpair": "^2.1.0",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tiny-secp256k1": "^2.2.3"
   }
 }
